// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TABLE[Label]: should create label to db 1`] = `
Array [
  Object {
    "color": "#ffffff",
    "id": 1,
    "text": "Inbox",
  },
]
`;

exports[`TABLE[Label]: should update label: color 1`] = `
Array [
  Object {
    "color": "#111111",
    "id": 3,
    "text": "Spam",
  },
]
`;

exports[`TABLE[Label]: should update label: color and text 1`] = `
Array [
  Object {
    "color": "#000000",
    "id": 2,
    "text": "labelmodified",
  },
]
`;

exports[`TABLE[Label]: should update label: text 1`] = `
Array [
  Object {
    "color": "#ffffff",
    "id": 4,
    "text": "labelmodified2",
  },
]
`;
